# instance-test

./: Cargo.toml
src/: icosphere.rs  main.rs  scene.rs
src/shaders/: icosphere.frag  icosphere.vert
